# WalkerPCL

./: CMakeLists.txt  TODO.txt  ism_pipeline.cpp  ism_pipeline_file.cpp  ism_test.cpp  ism_train.cpp  pipeline.cpp  pipeline_file.cpp  viewer.cpp
cloud_clusterer/: cloud_clusterer.h  euclidean_clusterer.h  euclidean_clusterer.tpp
filter/: downsampler.h  downsampler.tpp  filter.h  pass_through_filter.h  pass_through_filter.tpp  plane_filter.h  plane_filter.tpp
